@@ -1,27 +1,33 @@
-
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
 
 public class VirtualThreadsDemo {
+
     public static void main(String[] args) {
-        int n = 100000;
-        System.out.println("Launching " + n + " virtual threads...");
+
+        int n = 1000; // reduced for normal threads
+
+        System.out.println("Launching " + n + " threads...");
 
         Instant start = Instant.now();
+
         List<Thread> list = new ArrayList<>();
 
         for (int i = 0; i < n; i++) {
+
             final int index = i;
-            Thread t = Thread.startVirtualThread(() -> {
-                if (index % 20000 == 0) {
-                    System.out.println("Virtual thread " + index + " executing.");
+
+            Thread t = new Thread(() -> {
+                if (index % 200 == 0) {
+                    System.out.println("Thread " + index + " executing.");
                 }
             });
+
+            t.start();
             list.add(t);
         }
-
 
         for (Thread t : list) {
             try {
@@ -32,7 +38,10 @@ public class VirtualThreadsDemo {
         }
 
         Instant end = Instant.now();
-        System.out.println("All virtual threads finished!");
-        System.out.println("Time taken: " + Duration.between(start, end).toMillis() + " ms");
+
+        System.out.println("All threads finished!");
+        System.out.println("Time taken: "
+                + Duration.between(start, end).toMillis()
+                + " ms");
     }
 }
